--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="book__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\book (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="history_book" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\history-book.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="home_logo__2_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\home_logo (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
